--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 .comidas{
-    width: 20%;
+    width: 300px !important;
+    height: 200px !important;
+}
+
+
+.divtodas-comidas{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+
+}
+
+.titulocomidas{
+    font-size: 30px;
+    display: block;
 }
